# Louvre

./: README.md  checklist.txt  clear_qt.sh
docs/: Doxyfile  (+216 more)
src/: All.pro  Wayland++.pro  WaylandPlus.pro  makefile  meson.build
src/MyCompositor/: MyClient.cpp  MyCompositor.cpp  MyCompositor.h  MyCompositor.pro  MyOutputManager.cpp  MySurface.cpp  MySurface.h  main.cpp
src/MyCompositor/shaders/: Fragment.glsl  Vertex.glsl
src/Wayland++/: WBackend.h  WBackendDRM.cpp  WBackendDRM.h  WBackendX11.cpp  WBackendX11.h  WClient.cpp  WClient.h  WCompositor.cpp  WCompositor.h  WInput.cpp  WInput.h  WOpenGL.cpp  WOpenGL.h  WRegion.cpp  WRegion.h  WSurface.cpp  WSurface.h  WTexture.cpp  WTexture.h  WTypes.h  WView.h  WWayland.cpp  WWayland.h  Wayland++.pro
src/Wayland++/classes/: WBackend.h  WBackendDRM.cpp  WBackendX11.cpp  WClient.cpp  WClient.h  WCompositor.cpp  WCompositor.h  WInput.cpp  WInput.h  WNamespaces.h  WOpenGL.cpp  WOpenGL.h  WOutput.cpp  WOutput.h  WOutputManager.cpp  WOutputManager.h  WPositioner.cpp  WPositioner.h  WRegion.cpp  WSurface.cpp  WSurface.h  WTexture.cpp  WTexture.h  WWayland.cpp  WWayland.h
src/Wayland++/globals/: Compositor.cpp  Compositor.h  DataDeviceManager.cpp  DataDeviceManager.h  Keyboard.cpp  Keyboard.h  Output.cpp  Output.h  Pointer.cpp  Pointer.h  Region.cpp  Region.h  Seat.cpp  Seat.h  Surface.cpp  Surface.h  XdgPopup.cpp  XdgPopup.h  XdgShell.cpp  XdgShell.h  XdgSurface.cpp  XdgSurface.h  XdgToplevel.cpp  XdgToplevel.h  XdgWmBase.cpp  XdgWmBase.h
src/Wayland++/globals/Wayland/: Compositor.cpp  Compositor.h  DataDeviceManager.cpp  DataDeviceManager.h  Keyboard.cpp  Keyboard.h  Output.cpp  Pointer.cpp  Region.cpp  Region.h  Seat.cpp  Subsurface.cpp  Surface.cpp  Surface.h
src/Wayland++/globals/XdgShell/: XdgPopup.cpp  XdgPopup.h  XdgPositioner.cpp  XdgPositioner.h  XdgSurface.cpp  XdgSurface.h  XdgToplevel.cpp  XdgToplevel.h  XdgWmBase.cpp  XdgWmBase.h  xdg-shell-unstable-v6.h  xdg-shell.h
src/Wayland++/protocols/: xdg-shell-unstable-v6.xml  xdg-shell.xml
src/backends/: LBackend.h  LBackends.pro
src/backends/DRM/: LBackendDRM.cpp  LBackendDRM.pro
src/backends/X11/: LBackendX11.cpp  LBackendX11.pro  WBackend.h  X11Backend.cpp
src/classes/: MyOutputManager.cpp  MyOutputManager.h  WBackend.h  WBackendDRM.cpp  WBackendX11.cpp  WClient.cpp  WClient.h  WCompositor.cpp  WCompositor.h  WCursor.cpp  WCursor.h  WInput.cpp  WInput.h  WKeyboard.cpp  WKeyboard.h  WNamespaces.h  WOpenGL.cpp  WOpenGL.h  WOutput.cpp  WOutput.h  WOutputManager.cpp  WOutputManager.h  WOutputMode.cpp  WOutputMode.h  WPoint.cpp  WPoint.h  WPointF.cpp  WPointF.h  WPointer.cpp  WPointer.h  WPositioner.cpp  WPositioner.h  WRect.h  WRegion.cpp  WRegion.h  WSeat.cpp  WSeat.h  WSize.h  WSizeF.h  WSurface.cpp  (+11 more)
src/cursors/: DefaultCursor.h
src/examples/: Examples.pri  Examples.pro  meson.build
src/examples/01-Minimal/: Compositor.cpp  Compositor.h  Minimal.pro  Output.cpp  Output.h  Surface.cpp  Surface.h  main.cpp
src/examples/Damages/: Compositor.h  Damages.pro  Output.cpp  Output.h  Surface.h  main.cpp
src/examples/Empty/: Compositor.cpp  Compositor.h  Empty.pro  Keyboard.cpp  Keyboard.h  Output.cpp  Output.h  OutputManager.cpp  OutputManager.h  Pointer.cpp  Pointer.h  Popup.cpp  Popup.h  Seat.cpp  Seat.h  Surface.cpp  Surface.h  Toplevel.cpp  Toplevel.h  main.cpp
src/examples/Minimal/: Compositor.cpp  Compositor.h  Minimal.pro  Output.cpp  Output.h  main.cpp
src/examples/MyCompositor/: MyCompositor.cpp  MyCompositor.h  MyOutput.cpp  MyOutput.h  MySeat.h  MySurface.cpp  MySurface.h  MyToplevel.cpp  MyToplevel.h  main.cpp  meson.build
src/examples/MyCompositor/res/shaders/: Fragment.glsl  Vertex.glsl
src/examples/Region/: Compositor.cpp  Compositor.h  Output.cpp  Output.h  main.cpp
src/globals/Viewporter/: Viewporter.cpp  Viewporter.h
src/globals/Wayland/: Compositor.cpp  Compositor.h  DataDevice.cpp  DataDevice.h  DataDeviceManager.cpp  DataDeviceManager.h  Keyboard.cpp  Keyboard.h  Output.cpp  Output.h  Pointer.cpp  Pointer.h  Region.cpp  Region.h  Seat.cpp  Seat.h  Subcompositor.cpp  Subcompositor.h  Subsurface.cpp  Subsurface.h  Surface.cpp  Surface.h
src/globals/XdgShell/: XdgPopup.cpp  XdgPopup.h  XdgPositioner.cpp  XdgPositioner.h  XdgSurface.cpp  XdgSurface.h  XdgToplevel.cpp  XdgToplevel.h  XdgWmBase.cpp  XdgWmBase.h
src/lib/: Louvre.pro
src/lib/classes/: LBackend.h  LBackendDRM.cpp  LBackendX11.cpp  LBaseSurfaceRole.cpp  LBaseSurfaceRole.h  LClient.cpp  LClient.h  LCompositor.cpp  LCompositor.h  LCursor.cpp  LCursor.h  LCursorRole.cpp  LCursorRole.h  LDataDevice.cpp  LDataDevice.h  LDataOffer.cpp  LDataOffer.h  LDataSource.cpp  LDataSource.h  LKeyboard.cpp  LKeyboard.h  LNamespaces.h  LOpenGL.cpp  LOpenGL.h  LOutput.cpp  LOutput.h  LOutputManager.cpp  LOutputManager.h  LOutputMode.cpp  LOutputMode.h  LPoint.cpp  LPoint.h  LPointF.cpp  LPointF.h  LPointer.cpp  LPointer.h  LPopup.cpp  LPopup.h  LPopupRole.cpp  LPopupRole.h  (+23 more)
src/lib/classes/default/: LToplevelRoleDefault.cpp
src/lib/classes/private/: LBaseSurfaceRolePrivate.h  LClientPrivate.h  LCompositorPrivate.h  LCursorPrivate.h  LDataDevicePrivate.h  LDataOfferPrivate.h  LDataSourcePrivate.h  LOutputManagerPrivate.h  LOutputModePrivate.h  LOutputPrivate.h  LPopupRolePrivate.h  LPositionerPrivate.h  LSubsurfaceRolePrivate.h  LSurfacePrivate.h  LToplevelRolePrivate.h
src/lib/globals/Viewporter/: Viewporter.cpp  Viewporter.h
src/lib/globals/Wayland/: Compositor.cpp  DataDevice.cpp  DataDevice.h  DataDeviceManager.cpp  DataOffer.cpp  DataOffer.h  DataSource.cpp  DataSource.h  Keyboard.cpp  Keyboard.h  Output.cpp  Output.h  Pointer.cpp  Pointer.h  Region.cpp  Seat.cpp  Seat.h  Subcompositor.cpp  Subcompositor.h  Subsurface.cpp  Subsurface.h  Surface.cpp  Surface.h
src/lib/globals/XdgShell/: XdgPopup.cpp  XdgPopup.h  XdgPositioner.cpp  XdgPositioner.h  XdgSurface.cpp  XdgToplevel.cpp  XdgToplevel.h  XdgWmBase.cpp
src/lib/protocols/: louvre-dock-client.h  louvre-dock-server.h  louvre-dock.c  louvre-dock.xml  qt-shell-unstable-v1.xml  viewporter.xml
src/protocols/: wayland.h
(+780 files in other folders)
